--- a/views/administracion/unosolo/nuevoUsuario.jade
+++ b/views/administracion/unosolo/nuevoUsuario.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
   head
     meta(charset='UTF-8')
-    title Mi Perfil
+    title Nuevo usuario
   link(rel='stylesheet' href='/stylesheets/genericoUnoSolo.css')
   body
     header.header
@@ -73,6 +73,9 @@ html(lang='es')
 // .h3 Comienza tu prueba gratuita de 30 días ya mismo
 // p o puedes comprar tu plan en Softlife ahora mismo
 
+
+
+
 .container2
   form(action="guardarNuevoUsuario" method='POST')
     input(type='hidden' value= usuario.IdUsuario   name="idtemp") 
@@ -94,30 +97,40 @@ html(lang='es')
             input(type="text",name='nombreCompleto', value = usuarioVer.nombreCompleto , placeholder="Nombre completo")
             .input-icon
               i.fa.fa-user
-          h4 Nombre de usuario
-          .input-group.input-group-icon
-            input(type="text",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario")
-            .input-icon
-              i.fa.fa-envelope
-          h4 Contraseña
-          .input-group.input-group-icon
-            input(type="password", name='pass', value = usuarioVer.pass ,  placeholder="Contraseña")
-            .input-icon
-              i.fa.fa-envelope              
+        h4 Email 
+        .input-group.input-group-icon
+          input(type="email",name='mail', value = usuarioVer.mail,  placeholder="Email", required)
+          .input-icon
+            i.fa.fa-key 
+           
       .col-half
         h4 Telefono
         .input-group.input-group-icon
           input(type="text",name='telefono', value = usuarioVer.telefono,  placeholder="Telefono")
           .input-icon
             i.fa.fa-key
-        h4 Email 
+        h4 Contraseña Email
         .input-group.input-group-icon
-          input(type="email",name='mail', value = usuarioVer.mail,  placeholder="Email")
+          input(type="password",name='passMail', value = usuarioVer.passMail,  placeholder="Contraseña Email", required)
           .input-icon
             i.fa.fa-key 
+    .row        
+      h4 Nombre de usuario
+        .input-group.input-group-icon
+          input(type="text",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario", required)
+          .input-icon
+            i.fa.fa-envelope
+    .row 
+      .col-half      
+        h4 Contraseña
+          .input-group.input-group-icon
+            input(type="password", name='pass', value = usuarioVer.pass ,  placeholder="Contraseña", required)
+            .input-icon
+              i.fa.fa-envelope  
+      .col-half 
         h4 Confirme Contraseña 
         .input-group.input-group-icon
-          input(type="password",name='confirmPass',  usuarioVer.pass, placeholder="Confirme Contraseña")
+          input(type="password",name='confirmPass',  usuarioVer.pass, placeholder="Confirme Contraseña", required)
           .input-icon
             i.fa.fa-key                
       h4 Direccion 
