--- a/views/miPerfil.jade
+++ b/views/miPerfil.jade
@@ -87,22 +87,30 @@ html(lang='es')
             input(type="text", name='nombreCompleto', value = usuario.nombreCompleto , placeholder="Nombre completo")
             .input-icon
               i.fa.fa-user
-          h4 Nombre de usuario
-          .input-group.input-group-icon
-            input(type="username",name='username' , value = usuario.username , placeholder="Nombre de usuario")
-            .input-icon
-              i.fa.fa-envelope
+        h4 Email 
+        .input-group.input-group-icon
+          input(type="email", name='mail', value = usuario.mail,  placeholder="Email", required)
+          .input-icon
+            i.fa.fa-key 
+    
       .col-half
         h4 Telefono
         .input-group.input-group-icon
           input(type="text", name='telefono', value = usuario.telefono,  placeholder="Telefono")
           .input-icon
             i.fa.fa-key
-        h4 Email 
+      
+        h4 Contraseña Email 
         .input-group.input-group-icon
-          input(type="email", name='mail', value = usuario.mail,  placeholder="Email")
+          input(type="password", name='passMail', value = usuario.passMail,  placeholder="Contrasela Email", required)
           .input-icon
             i.fa.fa-key   
+      h4 Nombre de usuario
+      .input-group.input-group-icon
+        input(type="username",name='username' , value = usuario.username , placeholder="Nombre de usuario", required)
+        .input-icon
+          i.fa.fa-envelope
+
       h4 Direccion 
       .input-group.input-group-icon
         input(type="text", name='direccion',  value = usuario.direccion,  placeholder="Direccion")
