--- a/views/administracion/unosolo/verUnCentroCosto.jade
+++ b/views/administracion/unosolo/verUnCentroCosto.jade
@@ -132,7 +132,7 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
       .col-half
         h4 Nombre Centro de Costo
           .input-group.input-group-icon
-            input(tabindex="2",type="text", name ="nombreCentroCosto" , value = centroCosto.nombreCentroCosto , placeholder="Nombre Centro de Costo", required)
+            input(tabindex="2",type="text", name ="nombreCentroCosto" , value = centroCosto.nombreCentroCosto , placeholder="Nombre Centro de Costo")
             .input-icon
               i.fa.fa-envelope
         
