--- a/views/administracion/unosolo/nuevoUsuario.jade
+++ b/views/administracion/unosolo/nuevoUsuario.jade
@@ -73,9 +73,6 @@ html(lang='es')
 // .h3 Comienza tu prueba gratuita de 30 días ya mismo
 // p o puedes comprar tu plan en Softlife ahora mismo
 
-
-
-
 .container2
   form(action="guardarNuevoUsuario" method='POST')
     input(type='hidden' value= usuario.IdUsuario   name="idtemp") 
@@ -97,40 +94,30 @@ html(lang='es')
             input(type="text",name='nombreCompleto', value = usuarioVer.nombreCompleto , placeholder="Nombre completo")
             .input-icon
               i.fa.fa-user
-        h4 Email 
-        .input-group.input-group-icon
-          input(type="email",name='mail', value = usuarioVer.mail,  placeholder="Email", required)
-          .input-icon
-            i.fa.fa-key 
-           
+          h4 Nombre de usuario
+          .input-group.input-group-icon
+            input(type="text",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario")
+            .input-icon
+              i.fa.fa-envelope
+          h4 Contraseña
+          .input-group.input-group-icon
+            input(type="password", name='pass', value = usuarioVer.pass ,  placeholder="Contraseña")
+            .input-icon
+              i.fa.fa-envelope              
       .col-half
         h4 Telefono
         .input-group.input-group-icon
           input(type="text",name='telefono', value = usuarioVer.telefono,  placeholder="Telefono")
           .input-icon
             i.fa.fa-key
-        h4 Contraseña Email
+        h4 Email 
         .input-group.input-group-icon
-          input(type="password",name='passMail', value = usuarioVer.passMail,  placeholder="Contraseña Email", required)
+          input(type="email",name='mail', value = usuarioVer.mail,  placeholder="Email")
           .input-icon
             i.fa.fa-key 
-    .row        
-      h4 Nombre de usuario
-        .input-group.input-group-icon
-          input(type="text",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario", required)
-          .input-icon
-            i.fa.fa-envelope
-    .row 
-      .col-half      
-        h4 Contraseña
-          .input-group.input-group-icon
-            input(type="password", name='pass', value = usuarioVer.pass ,  placeholder="Contraseña", required)
-            .input-icon
-              i.fa.fa-envelope  
-      .col-half 
         h4 Confirme Contraseña 
         .input-group.input-group-icon
-          input(type="password",name='confirmPass',  usuarioVer.pass, placeholder="Confirme Contraseña", required)
+          input(type="password",name='confirmPass',  usuarioVer.pass, placeholder="Confirme Contraseña")
           .input-icon
             i.fa.fa-key                
       h4 Direccion 
