--- a/views/miPerfil.jade
+++ b/views/miPerfil.jade
@@ -74,7 +74,7 @@ html(lang='es')
 // p o puedes comprar tu plan en Softlife ahora mismo
 
 .container2
-  form(action="guardarPerfil" method='POST')
+  form(action="guardarUsuario" method='POST')
     
     input(type='hidden' value= usuario.IdUsuario   name="idtemp") 
     input(type='hidden' value= usuario.IdUsuario   name="IdUsuarioVer") 
@@ -87,30 +87,22 @@ html(lang='es')
             input(type="text", name='nombreCompleto', value = usuario.nombreCompleto , placeholder="Nombre completo")
             .input-icon
               i.fa.fa-user
-        h4 Email 
-        .input-group.input-group-icon
-          input(type="email", name='mail', value = usuario.mail,  placeholder="Email", required)
-          .input-icon
-            i.fa.fa-key 
-    
+          h4 Nombre de usuario
+          .input-group.input-group-icon
+            input(type="username",name='username' , value = usuario.username , placeholder="Nombre de usuario")
+            .input-icon
+              i.fa.fa-envelope
       .col-half
         h4 Telefono
         .input-group.input-group-icon
           input(type="text", name='telefono', value = usuario.telefono,  placeholder="Telefono")
           .input-icon
             i.fa.fa-key
-      
-        h4 Contraseña Email 
+        h4 Email 
         .input-group.input-group-icon
-          input(type="password", name='passMail', value = usuario.passMail,  placeholder="Contraseña Email", required)
+          input(type="email", name='mail', value = usuario.mail,  placeholder="Email")
           .input-icon
             i.fa.fa-key   
-      h4 Nombre de usuario
-      .input-group.input-group-icon
-        input(type="username",name='username' , value = usuario.username , placeholder="Nombre de usuario", required)
-        .input-icon
-          i.fa.fa-envelope
-
       h4 Direccion 
       .input-group.input-group-icon
         input(type="text", name='direccion',  value = usuario.direccion,  placeholder="Direccion")
@@ -151,6 +143,11 @@ html(lang='es')
               if usuario.IdFranquicia == lf.IdFranquicia
                 label(class="ptt" value = lf.IdFranquicia) #{lf.NombreFranquicia} 
                 
+
+
+
+                             
+
 
       .row
         .input-group                                                
