--- a/views/miPerfil.jade
+++ b/views/miPerfil.jade
@@ -95,7 +95,8 @@ html(lang='es')
               i.fa.fa-envelope
           h4 Email 
           .input-group.input-group-icon
-            input(type="email", name='mail', value = usuario.mail,  placeholder="Email")
+            input(type="email", name='mail', value = usuario.mail,  placeholder="Email", class="email1")
+            input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
             .input-icon
               i.fa.fa-key 
       .col-half
