--- a/public/stylesheets/genericoUnoSolo.css
+++ b/public/stylesheets/genericoUnoSolo.css
@@ -731,3 +731,15 @@ select option{
 	font-weight: bold;
 	
 }
+
+
+
+.email1{
+	width: 50%;
+}
+.email{
+	
+	width: 50%;
+	/*pointer-events: none;*/
+	color: #757575;
+}
