--- a/views/Contactos/unosolo/verUnContacto.jade
+++ b/views/Contactos/unosolo/verUnContacto.jade
@@ -115,7 +115,8 @@ html(lang='es')
             i.fa.fa-key
         h4 Mail
         .input-group.input-group-icon
-          input(type="text", name='mail',  value = contacto.mail, placeholder="Mail")
+          input(type="text", name='mail',  value = contacto.mail, placeholder="Mail", class="email1")
+          input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
           .input-icon
             i.fa.fa-key
         
