--- a/views/administracion/unosolo/verUnCentroCosto.jade
+++ b/views/administracion/unosolo/verUnCentroCosto.jade
@@ -173,7 +173,8 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
 
         h4 Email Gerente
         .input-group.input-group-icon
-          input(type="email", name="mailGerente", value = centroCosto.mailGerente,  placeholder="Email")
+          input(type="email", name="mailGerente", value = centroCosto.mailGerente,  placeholder="Email", class="email1")
+          input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
           .input-icon
             i.fa.fa-key 
                           
