--- a/views/administracion/unosolo/verUnUsuario.jade
+++ b/views/administracion/unosolo/verUnUsuario.jade
@@ -99,7 +99,8 @@ html(lang='es')
             i.fa.fa-envelope
         h4 Email 
           .input-group.input-group-icon
-            input(type="email",name='mail',  value = usuarioVer.mail,  placeholder="Email")
+            input(type="text",name='mail', value = usuarioVer.mail,  placeholder="Email", class="email1")
+            input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
             .input-icon
               i.fa.fa-key 
       .col-half
