--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-    background: url(../images/login.png) no-repeat center center fixed;
+    background: url(../images/main.jpg) no-repeat center center fixed;
     background-color: #00618B;
 	background-size: cover;
 }
