--- a/views/administracion/unosolo/verUnUsuario.jade
+++ b/views/administracion/unosolo/verUnUsuario.jade
@@ -72,7 +72,6 @@ html(lang='es')
 
 // .h3 Comienza tu prueba gratuita de 30 días ya mismo
 // p o puedes comprar tu plan en Softlife ahora mismo
-
 .container2
   form(action="guardarUsuario" method='POST')
     input(type='hidden' value= usuario.IdUsuario   name="idtemp") 
@@ -94,13 +93,17 @@ html(lang='es')
       
         h4 Nombre de usuario
         .input-group.input-group-icon
-          input(type="username",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario", required)
+          input(type="text",name='username',  value = usuarioVer.username , placeholder="Nombre de usuario", required)
           .input-icon
             i.fa.fa-envelope
         h4 Email 
           .input-group.input-group-icon
-            input(type="text",name='mail', value = usuarioVer.mail,  placeholder="Email", class="email1")
-            input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
+            if tipoMensaje == 10              
+              input(type="text", name='mail', value = errorMail,  placeholder="Email", class="email1")
+              input(type="text",name='dominio', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)               
+            else                         
+              input(type="text", name='mail', value = usuarioVer.mail,  placeholder="Email", class="email1")
+              input(type="text",name='dominio', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)  
             .input-icon
               i.fa.fa-key 
       .col-half
@@ -187,4 +190,3 @@ html(lang='es')
       form(action="verListausuarios" method='POST')    
         input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")                     
         input(type="submit", value="Cancelar" class ="btnCancelar")    
-          
