--- a/views/miPerfil.jade
+++ b/views/miPerfil.jade
@@ -72,13 +72,22 @@ html(lang='es')
 
 // .h3 Comienza tu prueba gratuita de 30 días ya mismo
 // p o puedes comprar tu plan en Softlife ahora mismo
-
 .container2
   form(action="guardarUsuario" method='POST')
     
     input(type='hidden' value= usuario.IdUsuario   name="idtemp") 
     input(type='hidden' value= usuario.IdUsuario   name="IdUsuarioVer") 
     
+    if tipoMensaje == 10
+        label(class="lblError") Ese nombre de correo electronico no es valido '#{errorMail}'   
+
+    if tipoMensaje == 1 
+      label(class="ok") Datos guardados correctamente
+    else  
+      if tipoMensaje == 2
+        label(class="lblError") Algo salio mal, los datos no se guardaron
+ 
+
     h3 Mi Informacion
     .row
       h4 Nombre completo
@@ -95,8 +104,12 @@ html(lang='es')
               i.fa.fa-envelope
           h4 Email 
           .input-group.input-group-icon
-            input(type="email", name='mail', value = usuario.mail,  placeholder="Email", class="email1")
-            input(type="email",name='mail', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)
+            if tipoMensaje == 10              
+              input(type="text", name='mail', value = errorMail,  placeholder="Email", class="email1")
+              input(type="text",name='dominio', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)               
+            else                         
+              input(type="text", name='mail', value = usuario.mail,  placeholder="Email", class="email1")
+              input(type="text",name='dominio', value = '@dominosgda.com',  placeholder="Email", class="email", readonly)              
             .input-icon
               i.fa.fa-key 
       .col-half
@@ -107,7 +120,7 @@ html(lang='es')
             i.fa.fa-key
         h4 Contraseña email 
         .input-group.input-group-icon
-          input(type="password", name='passMail', value = usuario.passMail placeholder="Contraseña email")
+          input(type="text", name='passMail', value = usuario.passMail placeholder="Contraseña email")
           .input-icon
             i.fa.fa-key   
       h4 Direccion 
@@ -167,6 +180,3 @@ html(lang='es')
         input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")    
         input(type='hidden' value= usuario.IdUsuario   name="IdUsuarioVer")                  
         input(type="submit", value="Cambiar Contraseña" class ="btnCancelar")
-
-
-
