--- a/views/Contactos/unosolo/verUnContacto.jade
+++ b/views/Contactos/unosolo/verUnContacto.jade
@@ -198,7 +198,7 @@ html(lang='es')
       form(action="armarCorreo" method='POST')    
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")  
           input(type="hidden", name='mail',  value = contacto.mail, placeholder="Mail")                          
-          input(type="submit", value="Mandar Correo" class ="brnNuevo")
+          input(type="submit", value="Mandar Correo" class ="mandarCoreo")
 
 .container3
   .row
