--- a/views/administracion/unosolo/nuevoUsuario.jade
+++ b/views/administracion/unosolo/nuevoUsuario.jade
@@ -86,6 +86,10 @@ html(lang='es')
       if tipoMensaje == 2
         label(class="lblError") Algo salio mal, los datos no se guardaron
     h3 Informacion del Usuario 
+    if tipoMensaje == 10
+      label(class="lblError") Ese nombre de correo electronico no es valido '#{correoMal} '
+      br
+      label(class="lblError") Solo debe de poner lo que va antes de @    
     .row
       .col-half
         h4 Nombre completo
