--- a/views/administracion/unosolo/verUnCentroCosto.jade
+++ b/views/administracion/unosolo/verUnCentroCosto.jade
@@ -130,6 +130,9 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
         h4 Telefono
           .input-group.input-group-icon
             input(type="text", name="telefono", value = centroCosto.telefono , placeholder="max 10 numeros")
+            input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")   
+            div(class="div")
+              a(href="tel:"+centroCosto.telefono class ="conocerUnidad") Llamar a la unidad                
             .input-icon
               i.fa.fa-envelope
 
@@ -268,7 +271,7 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
     .input-group                    
       input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")   
       div(class="div")
-        a(href="tel:"+centroCosto.telefono class ="conocerUnidad") Llamar a la oficina              
+        a(href="tel:"+centroCosto.telefono class ="conocerUnidad") Llamar a la unidad              
 
   if centroCosto.googleStreatView != null || centroCosto.googleStreatView == ""
     //.container3
