--- a/views/administracion/unosolo/verUnCentroCosto.jade
+++ b/views/administracion/unosolo/verUnCentroCosto.jade
@@ -256,21 +256,23 @@ form(action="guardarCentroCosto" method='POST' class="abajo")
           input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")  
           input(type='hidden' value= 1   name="agregar")                   
           input(type="submit", value="Nuevo" class ="brnNuevo")
-.container3
-  .row
-    .input-group    
-      form(action="armarCorreo" method='POST')    
-          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")  
-          input(type="hidden", name="mail", value = centroCosto.mailGerente,  placeholder="Email", class="email1")                         
-          input(type="submit", value="Mandar Correo" class ="mandarCoreo")       
 
+if centroCosto.mailGerente != ""
+  .container3
+    .row
+      .input-group    
+        form(action="armarCorreo" method='POST')    
+            input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")  
+            input(type="hidden", name="mail", value = centroCosto.mailGerente,  placeholder="Email", class="email1")                         
+            input(type="submit", value="Mandar Correo" class ="mandarCoreo")       
 
-.container3
-  .col-half
-    .input-group                    
-      input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")   
-      div(class="div")
-        a(href="tel:"+centroCosto.telefono class ="conocerUnidad") Llamar a la unidad              
+if centroCosto.telefono != ""
+  .container3
+    .col-half
+      .input-group                    
+        input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")   
+        div(class="div")
+          a(href="tel:"+centroCosto.telefono class ="conocerUnidad") Llamar a la unidad              
 
   if centroCosto.googleStreatView != null || centroCosto.googleStreatView == ""
     //.container3
